--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -10,3 +10,5 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Welcome to Sarah Guitart's homepage!
+
+[Final Project: R Reference Guide](final_R_reference.html) 
